# vectordb-orm

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  main.yml  test.yml
vectordb_orm/: __init__.py  attributes.py  base.py  enums.py  fields.py  index.py  indexes.py  query.py  results.py  session.py  similarity.py
vectordb_orm/backends/: base.py  milvus.py  pinecone.py
vectordb_orm/backends/milvus/: __init__.py  indexes.py  milvus.py  similarity.py
vectordb_orm/backends/pinecone/: __init__.py  indexes.py  pinecone.py
vectordb_orm/tests/: conftest.py  models.py  test_base.py  test_indexes.py  test_query.py
vectordb_orm/tests/milvus/: test_indexes.py  test_milvus.py
