[tool.poetry]
name = "vectordb-orm"
version = "0.1.0"
description = ""
authors = ["Pierce Freeman <pierce@freeman.vc>"]
readme = "README.md"
packages = [{include = "vectordb_orm"}]

[tool.poetry.dependencies]
python = "^3.10"
pymilvus = "^2.2.6"
protobuf = "^4.22.3"
numpy = "^1.24.2"
pinecone-client = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
